--- a/r_scripts/data_wrangling.Rmd
+++ b/r_scripts/data_wrangling.Rmd
@@ -13,6 +13,9 @@ library(knitr)
 library(dplyr)
 library(janitor)
 library(qgraph)
+library(ape)
+library(TransPhylo)
+library(coda)
 fmt <- function(x, ...){format(x, big.mark=",",scientific=FALSE, ...)}
 knitr::opts_chunk$set(echo = F)
 # options(scipen=1, digits=2)
@@ -64,6 +67,7 @@ drugs <- c("rifampicin", "isoniazid", "ethambutol", "pyrazinamide", "streptomyci
 align <- c("l", "r", "r")
 col <- "cornflowerblue"
 threshold <- 50
+plot_text_sz <- 0.5
 
 ```
 
@@ -75,6 +79,7 @@ metadata_path <- "../metadata/"
 plots_path <- "../plots/"
 db_path <- "../../pipeline/db/"
 dist_path <- "../dist_and_pca/"
+beast_results_path <- "../beast_results/"
 
 ```
 
@@ -87,6 +92,7 @@ tree_all_samps_file <- paste0(plots_path, "PAKISTAN_ALL.tree.png")
 lineage_conversion_file <- paste0(db_path, "lineage_conversions.txt")
 dist_file <- paste0(dist_path, "PAKISTAN_ALL.dist.dist")
 dist_id_file <- paste0(dist_path, "PAKISTAN_ALL.dist.dist.id")
+mcc_tree_file <- paste0(beast_results_path, "PAKISTAN_ALL.mcc.tree")
 
 ```
 
@@ -99,6 +105,7 @@ historical_metadata <- read.csv(historical_metadata_file)
 lineage_conversions <- read.delim(lineage_conversion_file)
 dist <- read.delim(dist_file, header = F)
 dist_id <- read.delim(dist_id_file, header = F)
+mcc_tree <- ape::read.nexus(mcc_tree_file)
 
 ```
 
@@ -217,7 +224,7 @@ In 2019 [@WHO_2020]:
 | Previously treated cases |	7.3% (6.8-7.8) |
 
 
-### Historical genomic data on MTBC in Pakistan [@SITVIT2]
+### Historical genomic data on MTBC in Pakistan [@Demay2012]
 
 ```{r historical, echo=FALSE, out.width = "2000px"}
 
@@ -228,6 +235,7 @@ barplot(table(historical_metadata$Clade), las=2,
         main = title, col = col)
 
 ```
+
 
 
 *Mycobacterium tuberculosis* samples (N = `r n_samps_total`)
@@ -334,6 +342,89 @@ qgraph(1/dist_dated_thresh, layout='spring', vsize=5,
 ```
 
 
+### Beast results
+
+#### Beast parameters & priors:
+
+Parameters & priors are based on Xu (2020) [@Xu2020]
+
+| Beauti tab | Selection | Parameter values [min, max] |
+|:----------------------|:----------------------|:----------------------|
+| Site model | GTR/Gamma Site Model | gamma distribution [0, inf.] |
+| | |prior frequencies (estimated) [0, 1] |
+| | | Proportion invariant = 0 |
+|Correction for ascertainment bias ("constantSiteWeights") [added manually] | | no. of invariant A, C, G & T sites = 758511, 1449901, 1444524, 758336 |
+| Clock model | Strict clock                                           | Clock rate = 1.0E-7 (0.44 substitutions per genome per year ) |
+| Priors      | Population size model = Coalescent Constant Population | Pop size = log normal(100 [0, 200])                           |
+|             | MRCA  ("TreePrior")                                    | Laplace distribution                                          |
+|             |                                                        | Mu = 0                                                        |
+| MCMC        |      | iterations = 100000000 |
+|             |      | Sample every = 10000   |
+
+
+```{r beastresultslineages, echo=FALSE, out.width = "1000px"}
+# Beast mcc tree for L2, 3, 4
+
+# l2_mcc <- ape::read.nexus("../beast_results/l2.mcc.tree")
+# l3_mcc <- ape::read.nexus("../beast_results/l3.mcc.tree")
+# l4_mcc <- ape::read.nexus("../beast_results/l4.mcc.tree")
+# 
+# # Get last date from tree
+# first_date <- as.numeric(min(unlist(lapply(strsplit(mcc_tree$tip.label, "_"), function(x){x[length(x)]}))))
+# last_date <- as.numeric(max(unlist(lapply(strsplit(mcc_tree$tip.label, "_"), function(x){x[length(x)]}))))
+# 
+# plot_text_sz <- 1
+# x_lim <- c(2010, last_date_l2+10)
+# vline <- 2020
+# col <- "red"
+# x_labs <- seq(0, last_date_l2, by = 1)
+# 
+# par(mfrow=c(1,3))
+# 
+# # Convert ape phylo object into phylogenetic tree. Pass last date.
+# plot(l2_mcc, cex = plot_text_sz, x.lim = x_lim)
+# abline(v = last_date, col = col)
+# axis(1, at = x_labs, labels = x_labs)
+# 
+# plot(l3_mcc, cex = plot_text_sz, x.lim = x_lim)
+# abline(v = last_date, col = col)
+# axis(1, at = x_labs, labels = x_labs)
+# 
+# plot(l4_mcc, cex = plot_text_sz, x.lim = x_lim)
+# abline(v = last_date, col = col)
+# axis(1, at = x_labs, labels = x_labs)
+
+```
+
+
+```{r beastresults, echo=FALSE, out.width = "1500px"}
+
+
+# Get last date from tree
+first_date <- mcc_tree$root.edge
+last_date <- as.numeric(max(unlist(lapply(strsplit(mcc_tree$tip.label, "_"), function(x){x[length(x)]}))))
+
+x_lim <- c(last_date-10, last_date+10)
+col <- "red"
+x_labs_full <- seq(first_date, last_date, by = 500)
+x_labs_zoom <- seq(last_date-10, last_date, by = 1)
+
+# Convert ape phylo object into phylogenetic tree. Pass last date.
+# ptree <- TransPhylo::ptreeFromPhylo(mcc_tree, dateLastSample=last_date)
+plot(mcc_tree, cex = plot_text_sz, 
+     main = sprintf("Beast MCC tree of all dated samples, \n n = %s", length(mcc_tree$tip.label)))
+abline(v = last_date, col = col)
+axis(1, at = x_labs_full, labels = x_labs_full, cex.axis = plot_text_sz)
+
+plot(mcc_tree, cex = plot_text_sz, x.lim = x_lim,
+     main = "As above, zoomed into tips")
+for(i in x_labs_zoom){
+  abline(v = i, col = col)
+}
+axis(1, at = x_labs_zoom, labels = x_labs_zoom, cex.axis = plot_text_sz)
+
+
+```
 
 ### References
 
