--- a/r_scripts/data_wrangling.Rmd
+++ b/r_scripts/data_wrangling.Rmd
@@ -93,6 +93,8 @@ lineage_conversion_file <- paste0(db_path, "lineage_conversions.txt")
 dist_file <- paste0(dist_path, "PAKISTAN_ALL.dist.dist")
 dist_id_file <- paste0(dist_path, "PAKISTAN_ALL.dist.dist.id")
 mcc_tree_file <- paste0(beast_results_path, "PAKISTAN_ALL.mcc.tree")
+beast_log_file <- paste0(beast_results_path, "PAKISTAN_ALL.log")
+methods_file <- paste0(metadata_path, "pakistan_methods.tsv")
 
 ```
 
@@ -106,6 +108,8 @@ lineage_conversions <- read.delim(lineage_conversion_file)
 dist <- read.delim(dist_file, header = F)
 dist_id <- read.delim(dist_id_file, header = F)
 mcc_tree <- ape::read.nexus(mcc_tree_file)
+beast_log <- tracerer::parse_beast_log(beast_log_file)
+methods_table <- read.table(file = methods_file, sep = '\t', header = TRUE)
 
 ```
 
@@ -376,7 +380,7 @@ Parameters & priors are based on Xu (2020) [@Xu2020]
 # plot_text_sz <- 1
 # x_lim <- c(2010, last_date_l2+10)
 # vline <- 2020
-# col <- "red"
+#   col <- "red"
 # x_labs <- seq(0, last_date_l2, by = 1)
 # 
 # par(mfrow=c(1,3))
@@ -398,7 +402,6 @@ Parameters & priors are based on Xu (2020) [@Xu2020]
 
 
 ```{r beastresults, echo=FALSE, out.width = "1500px"}
-
 
 # Get last date from tree
 first_date <- mcc_tree$root.edge
@@ -425,6 +428,45 @@ axis(1, at = x_labs_zoom, labels = x_labs_zoom, cex.axis = plot_text_sz)
 
 
 ```
+
+#### Beast log file means and ESS values 
+
+```{r beastlog, echo=FALSE, out.width = "1500px"}
+
+# Results of beast log
+
+# Remove the burn-in
+beast_log <- tracerer::remove_burn_ins(
+  beast_log,
+  burn_in_fraction = 0.1
+)
+
+# Calculates the effective sample sizes of all parameter estimates
+esses <- t(tracerer::calc_esses(beast_log, sample_interval = 1000))
+
+# Get means
+means <- apply(beast_log, 2, mean)
+means <- means[!(names(means) %in% "Sample")]
+
+# Combine
+log_table <- cbind(means, esses)
+colnames(log_table) <- c("Mean", "ESS")
+log_table <- round(log_table, 2)
+
+log_table
+
+```
+
+
+### Methods
+```{r methods, echo=FALSE, out.width = "1500px"}
+
+kable(methods_table)
+
+```
+
+
+#### 
 
 ### References
 
