--- a/r_scripts/data_wrangling.Rmd
+++ b/r_scripts/data_wrangling.Rmd
@@ -16,6 +16,11 @@ library(qgraph)
 library(ape)
 library(TransPhylo)
 library(coda)
+library(ggplot2)
+library(ggtree)
+library(treeio)
+library(scales)
+library(gplots)
 fmt <- function(x, ...){format(x, big.mark=",",scientific=FALSE, ...)}
 knitr::opts_chunk$set(echo = F)
 # options(scipen=1, digits=2)
@@ -53,6 +58,10 @@ to_table <- function(x, pc_dir = "row"){
   x %>% adorn_ns(position = "front", ns = formatted_ns)
 }
 
+log10_ceiling <- function(x) {
+  10^(ceiling(log10(x)))
+}
+
 ```
 
 ```{r variables, echo = F}
@@ -86,14 +95,22 @@ beast_results_path <- "../beast_results/"
 ```{r files, echo = F}
 
 # Files ----
+
+# Metadata
 metadata_file <- paste0(metadata_path, "pakistan_metadata.csv")
 historical_metadata_file <- paste0(metadata_path, "historical_metadata.csv") # http://www.pasteur-guadeloupe.fr/
-tree_all_samps_file <- paste0(plots_path, "PAKISTAN_ALL.tree.png")
 lineage_conversion_file <- paste0(db_path, "lineage_conversions.txt")
+# Distance
 dist_file <- paste0(dist_path, "PAKISTAN_ALL.dist.dist")
 dist_id_file <- paste0(dist_path, "PAKISTAN_ALL.dist.dist.id")
+# Beast
 mcc_tree_file <- paste0(beast_results_path, "PAKISTAN_ALL.mcc.tree")
 beast_log_file <- paste0(beast_results_path, "PAKISTAN_ALL.log")
+beast_clusters_file <- paste0(metadata_path, "PAKISTAN_ALL.clusters.csv")
+# Images
+tree_all_samps_file <- paste0(plots_path, "PAKISTAN_ALL.tree.png")
+beast_clusters_pdf_file <- paste0(plots_path, "PAKISTAN_ALL.beast_clusters.png")
+# Other
 methods_file <- paste0(metadata_path, "pakistan_methods.tsv")
 
 ```
@@ -102,13 +119,19 @@ methods_file <- paste0(metadata_path, "pakistan_methods.tsv")
 
 # Read in data ----
 
+# Metadata
 metadata <- read.csv(metadata_file)
 historical_metadata <- read.csv(historical_metadata_file)
 lineage_conversions <- read.delim(lineage_conversion_file)
+# Dist
 dist <- read.delim(dist_file, header = F)
 dist_id <- read.delim(dist_id_file, header = F)
-mcc_tree <- ape::read.nexus(mcc_tree_file)
+# Beast
+mcc_tree_ape <- ape::read.nexus(mcc_tree_file)
+mcc_tree <- treeio::read.beast(mcc_tree_file)
 beast_log <- tracerer::parse_beast_log(beast_log_file)
+beast_clusters <- read.csv(beast_clusters_file, header = F, col.names = c("cluster", "id"))
+# Other
 methods_table <- read.table(file = methods_file, sep = '\t', header = TRUE)
 
 ```
@@ -366,65 +389,282 @@ Parameters & priors are based on Xu (2020) [@Xu2020]
 |             |      | Sample every = 10000   |
 
 
-```{r beastresultslineages, echo=FALSE, out.width = "1000px"}
-# Beast mcc tree for L2, 3, 4
+#### Beast trees - all dated samples and zoomed into clusters where MRC is 50 years before last sampling date
 
-# l2_mcc <- ape::read.nexus("../beast_results/l2.mcc.tree")
-# l3_mcc <- ape::read.nexus("../beast_results/l3.mcc.tree")
-# l4_mcc <- ape::read.nexus("../beast_results/l4.mcc.tree")
-# 
-# # Get last date from tree
-# first_date <- as.numeric(min(unlist(lapply(strsplit(mcc_tree$tip.label, "_"), function(x){x[length(x)]}))))
-# last_date <- as.numeric(max(unlist(lapply(strsplit(mcc_tree$tip.label, "_"), function(x){x[length(x)]}))))
-# 
-# plot_text_sz <- 1
-# x_lim <- c(2010, last_date_l2+10)
-# vline <- 2020
-#   col <- "red"
-# x_labs <- seq(0, last_date_l2, by = 1)
-# 
-# par(mfrow=c(1,3))
-# 
-# # Convert ape phylo object into phylogenetic tree. Pass last date.
-# plot(l2_mcc, cex = plot_text_sz, x.lim = x_lim)
-# abline(v = last_date, col = col)
-# axis(1, at = x_labs, labels = x_labs)
-# 
-# plot(l3_mcc, cex = plot_text_sz, x.lim = x_lim)
-# abline(v = last_date, col = col)
-# axis(1, at = x_labs, labels = x_labs)
-# 
-# plot(l4_mcc, cex = plot_text_sz, x.lim = x_lim)
-# abline(v = last_date, col = col)
-# axis(1, at = x_labs, labels = x_labs)
-
-```
-
-
-```{r beastresults, echo=FALSE, out.width = "1500px"}
+```{r beastresults, echo=FALSE, out.width = "1500px", warning = F, message = F}
 
 # Get last date from tree
-first_date <- mcc_tree$root.edge
-last_date <- as.numeric(max(unlist(lapply(strsplit(mcc_tree$tip.label, "_"), function(x){x[length(x)]}))))
+first_date <- mcc_tree_ape$root.edge
+last_date <- as.numeric(max(unlist(lapply(strsplit(mcc_tree_ape$tip.label, "_"), function(x){x[length(x)]}))))
+last_date_chr <- paste0(as.character(last_date), "-12-31")
+n_samps <- length(mcc_tree_ape$tip.label)
 
-x_lim <- c(last_date-10, last_date+10)
-col <- "red"
-x_labs_full <- seq(first_date, last_date, by = 500)
-x_labs_zoom <- seq(last_date-10, last_date, by = 1)
+# Prep data for heatmaps (strips)
 
-# Convert ape phylo object into phylogenetic tree. Pass last date.
-# ptree <- TransPhylo::ptreeFromPhylo(mcc_tree, dateLastSample=last_date)
-plot(mcc_tree, cex = plot_text_sz, 
-     main = sprintf("Beast MCC tree of all dated samples, \n n = %s", length(mcc_tree$tip.label)))
-abline(v = last_date, col = col)
-axis(1, at = x_labs_full, labels = x_labs_full, cex.axis = plot_text_sz)
+# Add id/year hybrid col
+metadata$id_year <- paste0(metadata$wgs_id, "_", metadata$year)
+rownames(metadata) <- metadata$id_year
+# heatmap_data <- metadata[metadata$id_year %in% mcc_tree_ape$tip.label, 
+#                          c("main_lineage", "dr_status"), drop = F]
+# Subset metadata
+lin_data <- metadata[, "main_lineage", drop = F]
+dr_status_data <- metadata[, "dr_status", drop = F]
+dr_data <- dplyr::select(metadata, rifampicin:delamanid)
 
-plot(mcc_tree, cex = plot_text_sz, x.lim = x_lim,
-     main = "As above, zoomed into tips")
-for(i in x_labs_zoom){
-  abline(v = i, col = col)
+# Convert lin and DR data to factors
+dr_data <- data.frame(apply(dr_data, 2, as.factor)) 
+lin_data <- data.frame(apply(lin_data, 2, as.factor))
+
+# Change col names 
+colnames(dr_status_data) <- "DR status"
+colnames(lin_data) <- "Lineage"
+
+# Define cols for each dataset
+alpha <- 0.9
+lin_colours <- rainbow(length(unique(metadata$main_lineage)), alpha = alpha)
+dr_status_colours <- alpha(col2hex(c("green1", "yellow2", "orange1", "red1", "black", "grey")), alpha = alpha)
+
+# Add names (unique vals for each dataset) to dataframes. Don't need to do this for the binary data (DR individual status)
+names(lin_colours) <- c(sort(unique(metadata$main_lineage)))
+names(dr_status_colours) <- c("Sensitive", "Pre-MDR", "MDR", "Pre-XDR", "XDR", "Other")
+
+# Tree setup
+x_lim <- c(first_date-10, last_date+(last_date*0.8))
+y_lim <- c(-5, n_samps + (n_samps * 0.1))
+v_line_col <- "red"
+x_labs_full <- seq(first_date, last_date, by = 100)
+x_labs_zoom <- seq(last_date-50, last_date, by = 1)
+offset <- 50
+width <- 0.05
+angle <- 45
+
+# Draw basic tree
+gg_mcmc_tree <- ggtree(mcc_tree, mrsd = last_date_chr) %<+% metadata +
+  theme_tree2() +
+  # geom_tiplab(align=TRUE, linetype='dashed', linesize=.3, size = 2) + 
+  geom_range("length_0.95_HPD", color='red', size=2, alpha=.5) +
+  geom_text2(aes(label=round(as.numeric(posterior), 2),
+                 subset=as.numeric(posterior)> 0.9,
+                 x=branch), vjust=0) +
+  coord_cartesian(ylim = y_lim) +
+  scale_x_continuous(breaks = x_labs_full, labels = x_labs_full, limits = x_lim)+
+  theme(axis.text.x = element_text(face = "bold", size = 8, angle = 45, hjust = 1))
+
+# Add lin data 
+lin_hm <- gheatmap(gg_mcmc_tree, lin_data,
+         width = width,
+         offset = offset, color = NULL,
+         colnames_position = "top",
+         colnames_angle = angle, colnames_offset_y = 1,
+         hjust = 0,
+         font.size = 3) +
+  scale_fill_manual(values = lin_colours, breaks = names(lin_colours) )+
+  labs(fill = "Lineage")
+
+# Do this to add new gheatmap for some reason
+# See "7.3.1 Visualize tree with multiple associated matrix" https://yulab-smu.top/treedata-book/chapter7.html
+lin_hm <- lin_hm + ggnewscale::new_scale_fill() 
+
+# Add DR status
+dr_status_hm <- gheatmap(lin_hm, dr_status_data,
+                   width = width,
+                   offset = offset+100, color = NULL,
+                   colnames_position = "top",
+                   colnames_angle = angle, colnames_offset_y = 1,
+                   hjust = 0,
+                   font.size = 3) +
+  scale_fill_manual(values = dr_status_colours, breaks = names(dr_status_colours) )+
+  labs(fill = "DR\nstatus")
+
+# Add DR individual status
+dr_status_hm <- dr_status_hm + ggnewscale::new_scale_fill() 
+
+gheatmap(dr_status_hm, dr_data,
+         offset = offset+200,
+         width = width+0.5,
+         # color = NULL,
+         low="white", high="black", color="black",
+         colnames_position = "top",
+         colnames_angle = angle, colnames_offset_y = 1,
+         hjust = 0,
+         font.size = 2.5, 
+         legend_title = "llw") +
+  scale_fill_manual(values=c("white", "black"), labels = c("Sensitive", "Resistant", "NA"), na.value = "grey")+
+  labs(fill = "Drug\nresistance")
+
+
+
+# Zoom in to clusters
+
+# Zoom tree setup
+zoom_range <- c((last_date+1) - 50, (last_date + 1) + 50)
+zoom_range_seq <- seq(zoom_range[1], (last_date+1), 2)
+
+offset_zoom <- 0
+width_zoom <- 0.001
+
+gg_mcmc_tree_zoom <- ggtree(mcc_tree, mrsd = last_date_chr) %<+% metadata +
+ theme_tree2() +
+ coord_cartesian(ylim = y_lim) +
+ scale_x_continuous(breaks = zoom_range_seq,
+                    labels = zoom_range_seq,
+                    limits = zoom_range) +
+# scale_x_continuous(breaks = x_labs_full, labels = x_labs_full, limits = x_lim)+
+ geom_vline(aes(xintercept = 2020), col = "red")+
+ # geom_tiplab(align = TRUE, linetype='dashed', linesize=.3, size = 2) +
+ theme(axis.text.x = element_text(face = "bold", size = 8, angle = 45, hjust = 1))
+
+# Add lin data 
+lin_hm <- gheatmap(gg_mcmc_tree_zoom, lin_data,
+                   width = width_zoom,
+                   offset = offset_zoom, 
+                   color = NULL,
+                   colnames_position = "top",
+                   colnames_angle = angle, colnames_offset_y = 1,
+                   hjust = 0,
+                   font.size = 3) +
+  scale_fill_manual(values = lin_colours, breaks = names(lin_colours) )+
+  labs(fill = "Lineage")
+
+# Do this to add new gheatmap for some reason
+# See "7.3.1 Visualize tree with multiple associated matrix" https://yulab-smu.top/treedata-book/chapter7.html
+lin_hm <- lin_hm + ggnewscale::new_scale_fill() 
+
+# Add DR status
+dr_status_hm <- gheatmap(lin_hm, dr_status_data,
+                         width = width_zoom,
+                         offset = offset_zoom + 2, 
+                         color = NULL,
+                         colnames_position = "top",
+                         colnames_angle = angle, colnames_offset_y = 1,
+                         hjust = 0,
+                         font.size = 3) +
+  scale_fill_manual(values = dr_status_colours, breaks = names(dr_status_colours) )+
+  labs(fill = "DR\nstatus")
+
+# Add DR individual status
+dr_status_hm <- dr_status_hm + ggnewscale::new_scale_fill() 
+
+gheatmap(dr_status_hm, dr_data,
+         offset = offset_zoom + 4,
+         width = width_zoom + 0.02,
+         # color = NULL,
+         low="white", high="black", color="black",
+         colnames_position = "top",
+         colnames_angle = angle, 
+         colnames_offset_y = 1,
+         hjust = 0,
+         font.size = 2.5, 
+         legend_title = "llw") +
+  scale_fill_manual(values=c("white", "black"), labels = c("Sensitive", "Resistant", "NA"), na.value = "grey")+
+  labs(fill = "Drug\nresistance")
+
+
+
+# Loop through clusters
+
+clusters_split <- split(beast_clusters, beast_clusters$cluster)
+mcc_tree_tips <- mcc_tree@phylo$tip.label
+
+# pdf(file = beast_clusters_pdf_file)
+for(i in seq(clusters_split)){
+
+  names_to_keep <- clusters_split[[i]]$id
+  names_to_drop <- mcc_tree_tips[!(mcc_tree_tips %in% names_to_keep)]
+  clust_tree <- treeio::drop.tip(mcc_tree, names_to_drop)
+
+  # Do tree first to get first and last date
+  last_date_clust <- as.numeric(max(unlist(lapply(strsplit(clust_tree@phylo$tip.label, "_"), function(x){x[length(x)]}))))
+  last_date_clust_chr <- paste0(as.character(last_date), "-12-31")
+  gg_clust_tree <- ggtree(clust_tree, mrsd = last_date_clust_chr) %<+% metadata +
+    theme_tree2()
+  last_date_clust <- ceiling(max(gg_clust_tree$data$x))
+  first_date_clust <- floor(min(gg_clust_tree$data$x))
+
+  n_samps <- length(clust_tree@phylo$tip.label)
+  last_date_clust_chr <- paste0(last_date_clust-1, "-12-31")
+  date_range_clust <- c(first_date_clust, last_date_clust)
+  year_span_clust <- diff(date_range_clust)
+  oom <- log10_ceiling(year_span_clust)
+  if(oom == 1){
+    by <- 1
+  }else if(oom == 10){
+    by <- 2
+  }else if(oom == 100){
+    by <- 10
+  }else{
+    by <- 100
+  }
+  zoom_range_seq_clust <- seq(first_date_clust,
+                              last_date_clust,
+                              by = by)
+
+  post_tree_multiply <- 5
+  post_tree_span <- (year_span_clust * post_tree_multiply)
+  x_lim_clust <- c(first_date_clust - (year_span_clust*0.2), last_date_clust + post_tree_span)
+  y_lim_clust <- c(0 - floor(n_samps*0.1),  n_samps + ceiling(n_samps*0.2) )
+  # width <- width * (p$data$x %>% range(na.rm = TRUE) %>% diff)/ncol(data)
+  width_clust <- 0.035 * post_tree_multiply  # % of tree time span
+  # offset_clust <- (width_clust * year_span_clust) + ((width_clust * year_span_clust)*0.1)
+  offset_clust <- (width_clust * year_span_clust)
+
+  gg_clust_tree <- ggtree(clust_tree, mrsd = last_date_clust_chr) %<+% metadata +
+    theme_tree2() +
+    coord_cartesian(ylim = y_lim_clust) +
+    scale_x_continuous(breaks = zoom_range_seq_clust,
+                       labels = zoom_range_seq_clust,
+                       limits = x_lim_clust) +
+    geom_vline(aes(xintercept = last_date_clust), col = "red")+
+    theme(axis.text.x = element_text(face = "bold", size = 8, angle = 45, hjust = 1))
+
+# Add lin data
+lin_hm_clust <- gheatmap(gg_clust_tree, lin_data,
+                   width = width_clust,
+                   offset = 0,
+                   color = NULL,
+                   colnames_position = "top",
+                   colnames_angle = angle,
+                   # colnames_offset_y = 1,
+                   hjust = 0,
+                   font.size = 3) +
+  scale_fill_manual(values = lin_colours, breaks = names(lin_colours) )+
+  labs(fill = "Lineage")
+
+lin_hm_clust <- lin_hm_clust + ggnewscale::new_scale_fill()
+
+# Add DR status clusters
+dr_status_hm_clust <- gheatmap(lin_hm_clust, dr_status_data,
+                         width = width_clust,
+                         offset = offset_clust,
+                         color = NULL,
+                         colnames_position = "top",
+                         colnames_angle = angle,
+                         # colnames_offset_y = 1,
+                         hjust = 0,
+                         font.size = 3) +
+  scale_fill_manual(values = dr_status_colours, breaks = names(dr_status_colours) )+
+  labs(fill = "DR\nstatus")
+
+dr_status_hm_clust <- dr_status_hm_clust + ggnewscale::new_scale_fill()
+
+final_plot <- gheatmap(dr_status_hm_clust, dr_data,
+         width = width_clust * ncol(dr_data),
+         # offset = ceiling(offset_clust * 3),
+         offset = (offset_clust * 2) + (offset_clust * 0.2),
+         # color = NULL,
+         low="white", high="black", color="black",
+         colnames_position = "top",
+         colnames_angle = angle,
+         colnames_offset_y = 0,
+         hjust = 0,
+         font.size = 2.5,
+         legend_title = "llw") +
+  scale_fill_manual(values=c("white", "black"), labels = c("Sensitive", "Resistant", "NA"), na.value = "grey")+
+  labs(fill = "Drug\nresistance")
+
+print(final_plot)
 }
-axis(1, at = x_labs_zoom, labels = x_labs_zoom, cex.axis = plot_text_sz)
+# dev.off()
 
 
 ```
