--- a/r_scripts/data_wrangling.Rmd
+++ b/r_scripts/data_wrangling.Rmd
@@ -21,6 +21,7 @@ library(ggtree)
 library(treeio)
 library(scales)
 library(gplots)
+library(RColorBrewer)
 fmt <- function(x, ...){format(x, big.mark=",",scientific=FALSE, ...)}
 knitr::opts_chunk$set(echo = F)
 # options(scipen=1, digits=2)
@@ -109,7 +110,8 @@ beast_log_file <- paste0(beast_results_path, "PAKISTAN_ALL.log")
 beast_clusters_file <- paste0(metadata_path, "PAKISTAN_ALL.clusters.csv")
 # Images
 tree_all_samps_file <- paste0(plots_path, "PAKISTAN_ALL.tree.png")
-beast_clusters_pdf_file <- paste0(plots_path, "PAKISTAN_ALL.beast_clusters.png")
+beast_clusters_pdf_file <- paste0(plots_path, "PAKISTAN_ALL.beast_clusters.pdf")
+dr_trees_pdf_file <- paste0(plots_path, "PAKISTAN_ALL.dr_trees.pdf")
 # Other
 methods_file <- paste0(metadata_path, "pakistan_methods.tsv")
 
@@ -147,6 +149,13 @@ n_snps_total <- 37970
 metadata_dated <- subset(metadata, !(is.na(metadata$year)))
 dated_samps <- metadata_dated$wgs_id
 
+n_samps <- length(dated_samps)
+
+first_year <- min(metadata_dated$year)
+last_year <- max(metadata_dated$year)
+
+n_drugs <-ncol(dplyr::select(metadata, rifampicin_test:delamanid_test))
+
 # Add row and col names to distance matrix
 colnames(dist) <- dist_id[, 1]
 row.names(dist) <- dist_id[, 1]
@@ -154,7 +163,6 @@ row.names(dist) <- dist_id[, 1]
 dist <- dist/2
 
 ```
-
 
 ```{r table_1}
 
@@ -224,13 +232,22 @@ dr_lin_tab <- to_table(dr_lin_tab, pc_dir = "all")
 
 ## Introduction
 
+<!--
 In 2019 [@WHO_2020]: 
 
 * Pakistan is a high-burden TB country (population 216.6 million).
 * One of eight countries accounting for two thirds of the global total TB instance (5.7%).
 * HIV prevalence is increasing. 190,000 people living with HIV (0.1 prevalence); 25,000 new infections. [@UNAIDS_2020]
-* High burden for multidrug-resistance (MDR-TB, resistance to isoniazid and rifampicin treatments (see table below).
+* High burden for multidrug-resistance (MDR-TB, resistance to isoniazid and rifampicin treatments (see table below)).
 * However overall treatment success rate is 93% and the mortality rate has been declining since at least 2000. 
+-->
+
+
+Pakistan is a high-burden TB country, being one of eight countries accounting for two-thirds of the global total TB instance (5.7%) [@WHO2020]. Furthermore, HIV prevalence in the country is increasing (0.1 prevalence 2019), which compounds the problem of TB infections and treatment [@UNAIDS_2020] (5,100 cases and 1,900 HIV-positive mortality cases in 2019). There is also a high burden for multidrug-resistance (MDR-TB, resistance to isoniazid and rifampicin treatments), with 25,000 cases in the latest WHO estimates. 
+
+Within such a context, it is crucial to monitor transmission patterns and ensure that patients are being treated with optimal drug regimens. Here, we analyse `r n_samps` whole genome sequences (WGS) of Pakistan *Mycobacterium tuberculosis* (*Mtb*) samples dating from `r first_year` to `r last_year`, using `r n_snps_total` SNPs to infer a timed phylogenetic tree and to predict resistance to `r n_drugs` drugs.
+
+Historically, *Mtb* samples from Pakistan belong predominantly to the CAS1-Delhi spoligotype family [@Demay2012] (see **figure \@ref(fig:historical)), which belongs to Lineage 3 [@Napier2020]. 
 
 
 **Estimates of TB burden, 2019**
@@ -389,6 +406,46 @@ Parameters & priors are based on Xu (2020) [@Xu2020]
 |             |      | Sample every = 10000   |
 
 
+#### Beast log file means and ESS values 
+
+```{r beastlog, echo=FALSE, out.width = "1500px"}
+
+# Results of beast log
+
+# Remove the burn-in
+beast_log <- tracerer::remove_burn_ins(
+  beast_log,
+  burn_in_fraction = 0.1
+)
+
+# Calculates the effective sample sizes of all parameter estimates
+esses <- t(tracerer::calc_esses(beast_log, sample_interval = 1000))
+
+# Get means
+means <- apply(beast_log, 2, mean)
+means <- means[!(names(means) %in% "Sample")]
+
+# Combine
+log_table <- cbind(means, esses)
+colnames(log_table) <- c("Mean", "ESS")
+log_table <- round(log_table, 2)
+
+log_table
+
+
+par(mfrow = c(2, 2))
+
+plot(beast_log$posterior, main = "posterior", type= 'l', ylab = "posterior")
+plot(beast_log$likelihood, main = "likelihood", type= 'l', ylab = "likelihood")
+plot(beast_log$prior, main = "prior", type= 'l', ylab = "prior")
+plot(beast_log$mrca.date.TreePrior., main = "MRCA", type= 'l', ylab = "MRCA")
+
+par(mfrow=c(1,1))
+
+```
+
+
+
 #### Beast trees - all dated samples and zoomed into clusters where MRC is 50 years before last sampling date
 
 ```{r beastresults, echo=FALSE, out.width = "1500px", warning = F, message = F}
@@ -410,10 +467,18 @@ rownames(metadata) <- metadata$id_year
 lin_data <- metadata[, "main_lineage", drop = F]
 dr_status_data <- metadata[, "dr_status", drop = F]
 dr_data <- dplyr::select(metadata, rifampicin:delamanid)
+dr_tbp_data <- dplyr::select(metadata, rifampicin_tbp:delamanid_tbp)
+drug_discrepancy_data <- dplyr::select(metadata, rifampicin_test:delamanid_test)
+
+# Clean dr_tbp_data
+dr_tbp_data[dr_tbp_data != "-"] <- 1
+dr_tbp_data[dr_tbp_data == "-"] <- 0
 
 # Convert lin and DR data to factors
 dr_data <- data.frame(apply(dr_data, 2, as.factor)) 
+dr_tbp_data <- data.frame(apply(dr_tbp_data, 2, as.factor)) 
 lin_data <- data.frame(apply(lin_data, 2, as.factor))
+# drug_discrepancy_data <- data.frame(apply(drug_discrepancy_data, 2, as.factor))
 
 # Change col names 
 colnames(dr_status_data) <- "DR status"
@@ -422,11 +487,14 @@ colnames(lin_data) <- "Lineage"
 # Define cols for each dataset
 alpha <- 0.9
 lin_colours <- rainbow(length(unique(metadata$main_lineage)), alpha = alpha)
-dr_status_colours <- alpha(col2hex(c("green1", "yellow2", "orange1", "red1", "black", "grey")), alpha = alpha)
+dr_status_colours <- scales::alpha(gplots::col2hex(c("green1", "yellow2", "orange1", "red1", "black", "grey")), alpha = alpha)
+drug_discrepancy_vals <- sort(unique(as.vector(as.matrix(drug_discrepancy_data))))
+drug_discrepancy_cols <- brewer.pal(length(drug_discrepancy_vals), "Paired")
 
 # Add names (unique vals for each dataset) to dataframes. Don't need to do this for the binary data (DR individual status)
 names(lin_colours) <- c(sort(unique(metadata$main_lineage)))
 names(dr_status_colours) <- c("Sensitive", "Pre-MDR", "MDR", "Pre-XDR", "XDR", "Other")
+names(drug_discrepancy_cols) <- drug_discrepancy_vals
 
 # Tree setup
 x_lim <- c(first_date-10, last_date+(last_date*0.8))
@@ -437,9 +505,13 @@ x_labs_zoom <- seq(last_date-50, last_date, by = 1)
 offset <- 50
 width <- 0.05
 angle <- 45
+line_sz <- 0.2
+legend_spec <- theme(legend.title = element_text(size = 7),
+                     legend.text = element_text(size = 5),
+                     legend.key.size = unit(0.3, "cm"))
 
 # Draw basic tree
-gg_mcmc_tree <- ggtree(mcc_tree, mrsd = last_date_chr) %<+% metadata +
+gg_mcmc_tree <- ggtree(mcc_tree, mrsd = last_date_chr, size = line_sz) %<+% metadata +
   theme_tree2() +
   # geom_tiplab(align=TRUE, linetype='dashed', linesize=.3, size = 2) + 
   geom_range("length_0.95_HPD", color='red', size=2, alpha=.5) +
@@ -457,9 +529,10 @@ lin_hm <- gheatmap(gg_mcmc_tree, lin_data,
          colnames_position = "top",
          colnames_angle = angle, colnames_offset_y = 1,
          hjust = 0,
-         font.size = 3) +
+         font.size = 2) +
   scale_fill_manual(values = lin_colours, breaks = names(lin_colours) )+
-  labs(fill = "Lineage")
+  labs(fill = "Lineage")+
+  legend_spec
 
 # Do this to add new gheatmap for some reason
 # See "7.3.1 Visualize tree with multiple associated matrix" https://yulab-smu.top/treedata-book/chapter7.html
@@ -472,47 +545,87 @@ dr_status_hm <- gheatmap(lin_hm, dr_status_data,
                    colnames_position = "top",
                    colnames_angle = angle, colnames_offset_y = 1,
                    hjust = 0,
-                   font.size = 3) +
+                   font.size = 2) +
   scale_fill_manual(values = dr_status_colours, breaks = names(dr_status_colours) )+
-  labs(fill = "DR\nstatus")
+  labs(fill = "DR status")+
+  legend_spec
 
 # Add DR individual status
 dr_status_hm <- dr_status_hm + ggnewscale::new_scale_fill() 
 
+width_plus <- 0.6
+font_sz <- 2
+
+pdf(file = dr_trees_pdf_file)
 gheatmap(dr_status_hm, dr_data,
          offset = offset+200,
-         width = width+0.5,
+         width = width + width_plus,
          # color = NULL,
          low="white", high="black", color="black",
          colnames_position = "top",
          colnames_angle = angle, colnames_offset_y = 1,
          hjust = 0,
-         font.size = 2.5, 
+         font.size = font_sz) +
+  scale_fill_manual(values=c("white", "black"), labels = c("Sensitive", "Resistant", "NA"), na.value = "grey")+
+  labs(fill = "Drug\nresistance")+
+  legend_spec
+
+
+# Drug resistance from TB profiler (genotypic drug resistance predictions)
+
+# pdf(file = dr_trees_pdf_file)
+gheatmap(dr_status_hm, dr_tbp_data,
+         offset = offset+200,
+         width = width + width_plus,
+         # color = NULL,
+         low="white", high="black", color="black",
+         colnames_position = "top",
+         colnames_angle = angle, colnames_offset_y = 1,
+         hjust = 0,
+         font.size = font_sz, 
          legend_title = "llw") +
   scale_fill_manual(values=c("white", "black"), labels = c("Sensitive", "Resistant", "NA"), na.value = "grey")+
-  labs(fill = "Drug\nresistance")
+  labs(fill = "Drug\nresistance\n(TB profiler)")+
+  legend_spec
+
+# Drug resistance genotype/phenotype discrepancies taking off from dr_status_hm tree
+
+gheatmap(dr_status_hm, drug_discrepancy_data, 
+         offset = offset+200, 
+         width = width + width_plus, 
+         color = NULL, 
+         colnames_position = "top", 
+         colnames_angle = angle, 
+         colnames_offset_y = 1, 
+         hjust = 0, 
+         font.size = font_sz) + 
+  scale_fill_manual(values = drug_discrepancy_cols, breaks = names(drug_discrepancy_cols))+ 
+  labs(fill = "Phen./Gen diff")+
+  legend_spec
 
 
 
 # Zoom in to clusters
 
 # Zoom tree setup
-zoom_range <- c((last_date+1) - 50, (last_date + 1) + 50)
+zoom_range <- c((last_date+1) - 50, (last_date + 1) + 65)
 zoom_range_seq <- seq(zoom_range[1], (last_date+1), 2)
 
 offset_zoom <- 0
-width_zoom <- 0.001
+width_zoom <- 0.0015
 
-gg_mcmc_tree_zoom <- ggtree(mcc_tree, mrsd = last_date_chr) %<+% metadata +
- theme_tree2() +
- coord_cartesian(ylim = y_lim) +
- scale_x_continuous(breaks = zoom_range_seq,
+gg_mcmc_tree_zoom <- ggtree(mcc_tree, mrsd = last_date_chr, size = line_sz) %<+% metadata +
+  # geom_tiplab(align=TRUE, linetype='dashed', linesize=.3, size = 2) +
+  geom_tiplab(align=T, size = 1.5, linetype=NA, hjust = -3.9)+
+  theme_tree2() +
+  coord_cartesian(ylim = y_lim) +
+  scale_x_continuous(breaks = zoom_range_seq,
                     labels = zoom_range_seq,
                     limits = zoom_range) +
-# scale_x_continuous(breaks = x_labs_full, labels = x_labs_full, limits = x_lim)+
- geom_vline(aes(xintercept = 2020), col = "red")+
- # geom_tiplab(align = TRUE, linetype='dashed', linesize=.3, size = 2) +
- theme(axis.text.x = element_text(face = "bold", size = 8, angle = 45, hjust = 1))
+  # scale_x_continuous(breaks = x_labs_full, labels = x_labs_full, limits = x_lim)+
+  geom_vline(aes(xintercept = 2020), col = "red")+
+  # geom_tiplab(align = TRUE, linetype='dashed', linesize=.3, size = 2) +
+  theme(axis.text.x = element_text(face = "bold", size = 6, angle = 45, hjust = 1))
 
 # Add lin data 
 lin_hm <- gheatmap(gg_mcmc_tree_zoom, lin_data,
@@ -522,9 +635,10 @@ lin_hm <- gheatmap(gg_mcmc_tree_zoom, lin_data,
                    colnames_position = "top",
                    colnames_angle = angle, colnames_offset_y = 1,
                    hjust = 0,
-                   font.size = 3) +
+                   font.size = 2) +
   scale_fill_manual(values = lin_colours, breaks = names(lin_colours) )+
-  labs(fill = "Lineage")
+  labs(fill = "Lineage")+
+  legend_spec
 
 # Do this to add new gheatmap for some reason
 # See "7.3.1 Visualize tree with multiple associated matrix" https://yulab-smu.top/treedata-book/chapter7.html
@@ -533,20 +647,22 @@ lin_hm <- lin_hm + ggnewscale::new_scale_fill()
 # Add DR status
 dr_status_hm <- gheatmap(lin_hm, dr_status_data,
                          width = width_zoom,
-                         offset = offset_zoom + 2, 
+                         offset = offset_zoom + 2.5, 
                          color = NULL,
                          colnames_position = "top",
                          colnames_angle = angle, colnames_offset_y = 1,
                          hjust = 0,
-                         font.size = 3) +
+                         font.size = 2) +
   scale_fill_manual(values = dr_status_colours, breaks = names(dr_status_colours) )+
-  labs(fill = "DR\nstatus")
+  labs(fill = "DR\nstatus")+
+  legend_spec
 
 # Add DR individual status
 dr_status_hm <- dr_status_hm + ggnewscale::new_scale_fill() 
+offset_zoom_plus <- 6
 
 gheatmap(dr_status_hm, dr_data,
-         offset = offset_zoom + 4,
+         offset = offset_zoom + offset_zoom_plus,
          width = width_zoom + 0.02,
          # color = NULL,
          low="white", high="black", color="black",
@@ -554,11 +670,42 @@ gheatmap(dr_status_hm, dr_data,
          colnames_angle = angle, 
          colnames_offset_y = 1,
          hjust = 0,
-         font.size = 2.5, 
+         font.size = font_sz, 
          legend_title = "llw") +
   scale_fill_manual(values=c("white", "black"), labels = c("Sensitive", "Resistant", "NA"), na.value = "grey")+
-  labs(fill = "Drug\nresistance")
+  labs(fill = "Drug\nresistance")+
+  legend_spec
 
+gheatmap(dr_status_hm, dr_tbp_data,
+         offset = offset_zoom + offset_zoom_plus,
+         width = width_zoom + 0.02,
+         # color = NULL,
+         low="white", high="black", color="black",
+         colnames_position = "top",
+         colnames_angle = angle, colnames_offset_y = 1,
+         hjust = 0,
+         font.size = font_sz, 
+         legend_title = "llw") +
+  scale_fill_manual(values=c("white", "black"), labels = c("Sensitive", "Resistant", "NA"), na.value = "grey")+
+  labs(fill = "Drug\nresistance\n(TB profiler)")+
+  legend_spec
+
+# Drug resistance genotype/phenotype discrepancies taking off from dr_status_hm tree
+
+gheatmap(dr_status_hm, drug_discrepancy_data, 
+         offset = offset_zoom + offset_zoom_plus, 
+         width = width_zoom + 0.02, 
+         color = NULL, 
+         colnames_position = "top", 
+         colnames_angle = angle, 
+         colnames_offset_y = 1, 
+         hjust = 0, 
+         font.size = font_sz) + 
+  scale_fill_manual(values = drug_discrepancy_cols, breaks = names(drug_discrepancy_cols))+ 
+  labs(fill = "Phen./Gen diff")+
+  legend_spec
+
+dev.off()
 
 
 # Loop through clusters
@@ -669,34 +816,6 @@ print(final_plot)
 
 ```
 
-#### Beast log file means and ESS values 
-
-```{r beastlog, echo=FALSE, out.width = "1500px"}
-
-# Results of beast log
-
-# Remove the burn-in
-beast_log <- tracerer::remove_burn_ins(
-  beast_log,
-  burn_in_fraction = 0.1
-)
-
-# Calculates the effective sample sizes of all parameter estimates
-esses <- t(tracerer::calc_esses(beast_log, sample_interval = 1000))
-
-# Get means
-means <- apply(beast_log, 2, mean)
-means <- means[!(names(means) %in% "Sample")]
-
-# Combine
-log_table <- cbind(means, esses)
-colnames(log_table) <- c("Mean", "ESS")
-log_table <- round(log_table, 2)
-
-log_table
-
-```
-
 
 ### Methods
 ```{r methods, echo=FALSE, out.width = "1500px"}
@@ -706,7 +825,6 @@ kable(methods_table)
 ```
 
 
-#### 
 
 ### References
 
